// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/deprecated.md inline validation: correct 1`] = `Array []`;

exports[`docs/rules/deprecated.md inline validation: custom-message 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 1,
        "line": 1,
        "message": "<my-element> is deprecated: replaced with <other-element>",
        "offset": 0,
        "ruleId": "deprecated",
        "severity": 2,
        "size": 11,
      },
    ],
    "source": "<my-element>...</my-element>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/deprecated.md inline validation: incorrect 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 1,
        "line": 1,
        "message": "<center> is deprecated",
        "offset": 0,
        "ruleId": "deprecated",
        "severity": 2,
        "size": 7,
      },
      Object {
        "column": 1,
        "line": 2,
        "message": "<big> is deprecated",
        "offset": 21,
        "ruleId": "deprecated",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<center>...</center>
<big>...</big>",
    "warningCount": 0,
  },
]
`;
